Bug 50743 - FORMATTING: Highlighting scrolls automatically
Summary: FORMATTING: Highlighting scrolls automatically
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.4 release
Hardware: Other All
: medium minor
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: BSA target:25.8.0 inReleaseNotes:25.8
Keywords:
: 52344 121558 125155 126198 (view as bug list)
Depends on:
Blocks: Scrolling-PageUpDown Highlight-Color
  Show dependency treegraph
 
Reported: 2012-06-05 10:34 UTC by tomcb
Modified: 2025-05-06 00:19 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomcb 2012-06-05 10:34:20 UTC
Problem description: When highlighting is toggled on, moving the mouse to the top or bottom of the writing window causes the page to scroll really fast. This is really irritating, as it means that as soon as you move the mouse back to the document from the toolbar, the page scrolls upwards, and you lose your place. For some reason it will scroll to the start of the document upwards, but only to the end of the current page downwards. In case compatibility with my touchpad is the issue, it is made by synaptics.

Steps to reproduce:
1. Toggle highlighting 'on' at toolbar
2. Move mouse to either top or bottom of writing window.

Current behavior: Page scrolls in direction that mouse is placed.

Expected behavior: No scrolling automatically.

Platform (if different from the browser): Windows 7 64-bit.
              
Browser: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:12.0) Gecko/20100101 Firefox/12.0
Comment 1 bfoman (inactive) 2013-01-09 10:56:05 UTC
Confirmed with:
LO 4.0.0.0.beta2
Build ID: own W7 debug build
Windows 7 Professional SP1 64 bit

(In reply to comment #0)
> Problem description: When highlighting is toggled on, moving the mouse to
> the top or bottom of the writing window causes the page to scroll really
> fast. This is really irritating, as it means that as soon as you move the
> mouse back to the document from the toolbar, the page scrolls upwards, and
> you lose your place. For some reason it will scroll to the start of the
> document upwards, but only to the end of the current page downwards.

I noticed that when you are in the position that header is invisible in the viewing window of your document and turn on the highlighting, then while moving mouse back to document area text is scrolled downward automatically. Also the behavior is inconsistent: when in highlight mode sometimes I can scroll downward and upward without problems by just moving the cursor, but sometimes it will scroll only to beginning or ending of the active page, sometimes it will scroll just few pages up/down or one up, few down or vice versa.
All this is very annoying.

P.S.
I am using plain mouse.
Comment 2 bfoman (inactive) 2013-03-06 12:35:27 UTC
*** Bug 52344 has been marked as a duplicate of this bug. ***
Comment 3 QA Administrators 2015-02-19 15:33:55 UTC Comment hidden (obsolete)
Comment 4 Buovjaga 2015-03-07 12:17:34 UTC
Still happening.

Win 7 Pro 64-bit, LibO Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Locale: fi_FI
Comment 5 MarjaE 2016-03-18 19:25:58 UTC
Breaks text selection as well as highlighting.
Comment 6 konsultor 2016-03-18 20:49:20 UTC
Fast scrolling still a problem when highlighting is on, in LibreOffice 5.0.4.2 (from openSuse).  Without highlighting, the scroll is slower but still too fast (for me).
Testing in OL document IG4202 (chapter on slide masters) I find that I can't scroll with the mouse across the page break between pages 9 and 10.
Comment 7 spesa 2016-06-16 00:51:13 UTC
Bug confirmed for LibreOffice Version: 5.0.3.2
Build ID: 1:5.0.3~rc2-0ubuntu1~trusty2
Locale: en-GB (en_GB.UTF-8)
on linuxmint 17.3.

tools related to the triger of this bug are: 
- highlight tool
- font color tool
Comment 8 jugglerkeenan95 2018-02-04 20:25:04 UTC
A possible solution to this problem or a similar one (jittery, inconsistent scrolling through page breaks), is uncheck everything except hardware acceleration in "Graphics output" found in Tools > Options > LibreOffice > View.

Scrolling in these settings is smooth as silk on Windows 10 pc. It is probably a bug between the NVIDIA GeForce GTX series (mine is the 960M) and OpenGL.


Version: 5.4.3.2 (x64)
Build ID: 92a7159f7e4af62137622921e809f8546db437e5
CPU threads: 8; OS: Windows 6.19; UI render: default; 
Locale: en-US (en_US); Calc: group
Comment 9 Kaue 2018-05-25 15:56:47 UTC
Still happening.

LibreOffice 6.0.4.2 (x64). Build ID ID de compilação: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf.
Windows 10 64bit.

Please make an option to disable completely the automatic scroll when highlighting is toggled on.
I need to highlight hundreds of pages every day, and this feature slows me down a lot.
Comment 10 jeff.roedel.isp 2018-09-09 16:06:23 UTC
Still happening. 

Version: 6.0.3.2
Ubuntu 18.04.1
Comment 11 QA Administrators 2019-09-10 08:45:38 UTC Comment hidden (obsolete)
Comment 12 konsultor 2019-09-30 18:36:34 UTC
Version: 6.2.7.1
Build ID: 20(Build:1)
CPU threads: 12; OS: Linux 4.12; UI render: default; VCL: kde5; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
from openSuse

does not display this problem.  Scrolling with the mouse cursor seem much smoother and crosses page breaks without hesitation.
Comment 13 Buovjaga 2019-09-30 18:58:36 UTC
Still repro

Version: 6.4.0.0.alpha0+ (x64)
Build ID: d744838991594eebe27acc4c7d9fb4579d654853
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-09-29_05:12:00
Locale: fi-FI (fi_FI); UI-Language: en-US
Calc: threaded
Comment 14 QA Administrators 2021-09-30 04:02:29 UTC Comment hidden (obsolete)
Comment 15 konsultor 2021-10-02 15:54:01 UTC
In LO from Suse the scrolling is still faster than I'd like but is no longer wildly out of control.

Ver. 7.1.4.2 /LO Community
Env:  CPU Threads:  12; os: Linux 5.3
UI:  UIRender: default; VCL: kf5
Locale:  en-US (en_US.UTF-8);  UI: en-US
Misc:  Calc: CL
Comment 16 Buovjaga 2021-10-05 04:56:40 UTC
I tested and there is no difference between 3.5.0 and master. In both it it possible to make it scroll slower, in decent-sized chunks about one per second, if you move the mouse to the edge of the visible document area carefully. Yet it is very easy to slip into crazy fast scrolling.

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7cd5b35caa8d4fa9d0ba2b2c6ce4b88726ed2be6
CPU threads: 2; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: threaded
Comment 17 QA Administrators 2023-10-06 03:19:59 UTC Comment hidden (obsolete)
Comment 18 David Huggins-Daines 2024-10-28 14:49:29 UTC
*** Bug 125155 has been marked as a duplicate of this bug. ***
Comment 19 David Huggins-Daines 2024-10-28 14:50:01 UTC
*** Bug 121558 has been marked as a duplicate of this bug. ***
Comment 20 David Huggins-Daines 2024-10-28 14:51:45 UTC
Lots of duplicates of this.  Just got bit by it today, seems people have been complaining (with greater and lesser degrees of politeness) about it for at least a decade, it also seems to be a "feature" inherited from StarOffice:

https://ask.libreoffice.org/t/turn-off-scrolling-in-writer-when-moving-mouse-to-top-bottom-in-highlighting-mode/9599
https://forum.openoffice.org/en/forum/viewtopic.php?t=87585
https://ask.libreoffice.org/t/writer-page-moves-around-when-highlighter-is-selected/51133
https://ask.libreoffice.org/t/how-do-i-stop-writer-from-uncontrolled-scrolling-when-i-scroll-with-the-mouse/28545/2
https://ask.libreoffice.org/t/jumpy-pages/1501/6 (maybe)

Probably possible to turn it off... if we could figure out where to put the configuration option :)
Comment 21 David Huggins-Daines 2024-10-28 14:52:04 UTC
*** Bug 126198 has been marked as a duplicate of this bug. ***
Comment 22 Commit Notification 2025-01-21 11:14:15 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/47bf215cc7693bde89143f63b88556c61a68a132

tdf#50743 tdf#37507 Improve scrolling while selecting

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2025-03-29 07:15:02 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/862483386614347e45ffdde69e109d4d2dd25fd2

tdf#50743 improve scrolling with selection

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Commit Notification 2025-05-06 00:19:10 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7fc7dc679d61f7d5313733005c244c87d25f32fd

tdf#50743 improve scrolling with selection

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.