tdf#50743 Improve scrolling while selecting

If the mouse leaves the document window scrolling of selections
happens now in smaller steps so the user is able to stop at the
intended position easier.

Change-Id: Ifd21c92936021f8e2213d34446672e2a8eab568f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179855
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>